[package]
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
build = "build.rs"
license = "Apache-2.0"
name = "node-rodio"
version = "0.0.3"

[build-dependencies]
neon-build = "0.1.23"

[dependencies]
neon = "0.1.23"
rodio = "0.8.0"
cpal = "0.8.2"
arcmutex = "0.2.0"

[lib]
crate-type = ["dylib"]
name = "node_rodio"
